[NO-JIRA] opens internal api for test usage